# react-fastapi

./: AGENTS.md  Makefile  README.md  opencode.json
.claude/skills/pre-commit-checklist/: SKILL.md
backend/: .env  .env.dev  .env.test  .gitignore  Makefile  README.md  alembic.ini  main.py  pyproject.toml  requirements.txt  ruff.toml  test_main.py
backend/alembic/: env.py
backend/alembic/versions/: 001_initial.py  002_add_confirmation_token.py
backend/app/: database.py  main.py
backend/app/api/: deps.py
backend/app/api/v1/: api.py
backend/app/api/v1/endpoints/: auth.py  health.py  items.py
backend/app/core/: config.py  exceptions.py  logging.py  middleware.py  security.py
backend/app/models/: __init__.py  base.py  item.py  user.py
backend/app/schemas/: auth.py  item.py
backend/app/services/: email.py
backend/scripts/: seed_dev.py  seed_test.py  setup_db.py
backend/tests/: conftest.py  test_auth.py  test_database.py  test_deps.py  test_e2e.py  test_email.py  test_error_handling.py  test_exceptions.py  test_logging.py  test_middleware.py
backend/tests/api/v1/: test_health.py  test_items.py  test_structure.py
frontend/: .env  .env.dev  .env.test  .gitignore  .prettierrc  Makefile  README.md  eslint.config.js  package-lock.json  package.json  postcss.config.js  tailwind.config.js  tsconfig.json  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo  vite.config.js  vite.config.ts  vitest.config.mts  vitest.config.ts
frontend/src/: App.css  App.jsx  App.tsx  index.css  main.tsx
frontend/tests/: App.test.jsx  App.test.tsx  api.test.jsx  api.test.tsx  apiClient.test.ts  authApi.test.ts  authStore.test.ts  components.test.jsx  components.test.tsx  confirmSignup.test.tsx  dashboard.test.jsx  dashboard.test.tsx  home.test.jsx  itemList.test.jsx  items.test.jsx  itemsApi.test.ts  login.test.jsx  login.test.tsx  loginForm.test.jsx  main.test.jsx  navbar.test.jsx  pages.test.jsx  pages.test.tsx  protectedRoute.test.jsx  protectedRoute.test.tsx  services.test.jsx  services.test.tsx  signup.test.tsx  store.test.jsx  store.test.ts  store.test.tsx
skills/: pre-commit-checklist.json
(+34 files in other folders)
